Add author, layout fixes.

--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -337,7 +337,7 @@
                     "id": "SYODD",
                     "description": "Select Odroid board configuration",
                     "command": [
-                        "manage_odroid_board"
+                        "module_select_xuodroid"
                     ],
                     "status": "Preview",
                     "author": "",
