Add Odroid board selection (#298)
* Add Odroid board selection
* Set status to review
* Add author, layout fixes.
* Indentation fixes
* Menu adjustement and simplified condition, spaces to tabs, name with GH name
* Update config.system.json
* Small cosmetic and code styling fixes
---------
Co-authored-by: Igor Pecovnik <igor@armbian.com>

--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -352,6 +352,16 @@
                     "status": "Stable",
                     "author": "@armbian",
                     "condition": "module_zfs status"
+                },
+                {
+                    "id": "SY020",
+                    "description": "Select Odroid board configuration",
+                    "command": [
+                        "manage_odroid_board select"
+                    ],
+                    "status": "Preview",
+                    "author": "",
+                    "condition": "[ $BOARDFAMILY == odroidxu4 ]"
                 }
             ]
         }
