--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -9,22 +9,22 @@
                     "description": "Enable Armbian firmware upgrades",
                     "about": "This will enable Armbian kernel upgrades that are currently put on hold.",
                     "command": [
-                        "armbian_fw_manipulate unhold"
+                        "module_armbian_firmware unhold"
                     ],
                     "status": "Stable",
                     "author": "@igorpecovnik",
-                    "condition": "[[ -n \"$(apt-mark showhold)\" ]]"
+                    "condition": "module_armbian_firmware hold status"
                 },
                 {
                     "id": "SY002",
                     "description": "Disable Armbian kernel upgrades",
                     "about": "Disable Armbian kernel/firmware upgrades",
                     "command": [
-                        "armbian_fw_manipulate hold"
+                        "module_armbian_firmware hold"
                     ],
                     "status": "Stable",
                     "author": "@igorpecovnik",
-                    "condition": "[[ -z \"$(apt-mark showhold)\" ]]"
+                    "condition": "! module_armbian_firmware hold status"
                 },
                 {
                     "id": "SY003",
@@ -230,25 +230,25 @@
                 },
                 {
                     "id": "SY010",
-                    "description": "Switch to rolling release",
+                    "description": "Switch to rolling packages repository",
                     "about": "This will switch OS to rolling releases.",
                     "command": [
-                        "set_rolling"
+                        "module_armbian_firmware repository rolling"
                     ],
                     "status": "Stable",
                     "author": "@igorpecovnik",
-                    "condition": "grep -q 'apt.armbian.com' /etc/apt/sources.list.d/armbian.list && [[ -z \"$(apt-mark showhold)\" ]]"
+                    "condition": "module_armbian_firmware repository stable status"
                 },
                 {
                     "id": "SY011",
-                    "description": "Switch to stable release",
+                    "description": "Switch to stable packages repository",
                     "about": "This will switch OS to stable releases",
                     "command": [
-                        "set_stable"
+                        "module_armbian_firmware repository stable"
                     ],
                     "status": "Stable",
                     "author": "@igorpecovnik",
-                    "condition": "grep -q 'beta.armbian.com' /etc/apt/sources.list.d/armbian.list && [[ -z \"$(apt-mark showhold)\" ]]"
+                    "condition": "module_armbian_firmware repository rolling status"
                 },
                 {
                     "id": "SY012",
@@ -287,7 +287,7 @@
                     "description": "Install alternative kernels",
                     "about": "Switching between kernels might change functionality of your device. \n\nIt might fail to boot!",
                     "command": [
-                        "switch_kernels"
+                        "module_armbian_firmware select"
                     ],
                     "status": "Stable",
                     "author": "@igorpecovnik",
